# duplicate-file-resolver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  a.out  cmake_install.cmake  compiled-exe  file_metadata.cpp  file_metadata.hpp  main.cpp
src/: DuplicateFilesCollection.cpp  DuplicateFilesCollection.hpp  FileMetadata.cpp  FileMetadata.hpp  file_metadata.cpp  file_metadata.hpp  main.cpp
