cmake_minimum_required(VERSION 3.5.1)
project(duplicate_file_resolver)
set(EXEC compiled-exe)
set (CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 20)
MESSAGE(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_CURRENT_LIST_DIR})
get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
foreach(dir ${dirs})
  message(STATUS "dir='${dir}'")
endforeach()
file(GLOB SOURCES *.cpp)
MESSAGE("${SOURCES}")
add_executable(${EXEC} ${SOURCES})
